client/src/dashboard/styles/widgets/_sparkline.scss
.sparkline__inner {
  // Edge case for hero KPI when there is missing data sections
  &.no-data {
    .metric-data {
      .value {
        text-transform: none;
        color: #224A61;

        @media (min-width: $screen-sm) {
          font-size: 3rem;
        }

        &::first-letter {
          text-transform: uppercase;
        }
      }
    }

    .decorator,
    .sparkline,
    .metric-meta {
      display: none;
    }
  }
  //end edge case

  .metric-trend {
    color: $cerulean;
  }

  .value {
    font-weight: 300;
  }

  .metric-unit {
    font-weight: 600;
    font-size: 2rem;
  }

  .metric-meta {
    .metric-trend {
      margin-right: 5px;
    }
  }

  .decorator {
    .fa {
      width: 17px;
    }
  }
}

.metric-data {
  display: flex;
  justify-content: center;

  .decorator {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    font-size: 1.2rem;
  }

  .value {
    flex-grow: 80%;
    font-size: $biggie-fallback;
    font-size: $biggie;
    line-height: 1;
  }
}

.dashboard__kpis {
  .widget {
    border: 0;
    box-shadow: none;
  }

  .widget__title {
    height: 40px;
    padding: 0;
  }

  .widget__inner {
    .sparkline__inner {
      .chart {
        display: none;

        @include media($screen-sm) {
          display: block;
        }
      }
    }
  }

  @media (max-width: $screen-sm) {
    .widget {
      display: table;
      width: 100%;
      margin: 0;
      padding: 5px 0;

      .widget__title {
        border-bottom: 0;
        text-align: left;
        height: auto;

        h4 {
          font-size: 1em;
          line-height: 1;
        }
      }

      .sparkline__inner {
        float: right;
      }

      .summary-text {
        display: none;
      }

      .widget__title,
      .widget__inner,
      .metric-data {
        .value,
        .sparkline {
          display: table-cell;
          font-size: $fallback;
          font-size: 1rem;
        }
      }

      .widget__inner {
        padding: 0 $spacing-unit / 2;
      }

      .value {
        font-weight: 700;
      }

      .decorator {
        flex-direction: row-reverse;
        font-size: 1rem;
        line-height: 1;
      }

      .metric-data {
        font-weight: 700;
        padding-right: 5px;
        letter-spacing: 0.5px;
      }

      .metric-meta {
        display: none;
      }
    }
  }
}

.has-data-false {
  .metric-data {
    .value {
      font-size: 3rem;
    }
  }
}

.widget__inner {
  .sparkline__inner {
    text-align: center;

    .chart {
      height: auto;
      display: block;
      margin: 0 auto;
      width: 80%;
      margin-bottom: 10px;
    }
  }
}

.dashboard__secondary {
  .widget__inner {
    .sparkline__inner {
      @media screen and (min-width: $screen-sm) {
        height: 300px;

        display: flex;
        flex-direction: column;
        justify-content: space-around;
      }

      @media screen and (min-width: $screen-md) {
        height: auto;
      }
    }
  }
}

.sparkline__inner {
  .metric-data {
    .value {
      color: #224A61;
      font-weight: 300;
      font-size: 3.75rem;
    }
    .decorator {
      font-weight: 600;
      margin-bottom: -10px;
    }
  }
}

